[package]
name = "xidle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
x11 = { version = "2.*.*", features = ["xlib", "xss"] }
emacs = "0.19.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
